<resources>
    <string name="app_name">Mesa News</string>

    <!-- Facebook -->
    <string name="facebook_app_id" translatable="false">225453175804166</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb225453175804166</string>

    <!-- Error -->
    <string name="error_no_internet">No internet connection</string>
    <string name="error_generic_error">Something went wrong. Try again</string>
    <string name="error_invalid_name">Invalid name</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_invalid_confirm_password">Invalid confirm password</string>
    <string name="error_try_again_button">Try again</string>

    <!-- Login -->
    <string name="login_title">Sign In to Mesa News</string>
    <string name="login_description">Stay tuned to the news around the world!</string>
    <string name="login_sign_up_text">Don\'t you have an account yet? <b>Sign up now!</b></string>
    <string name="login_forgot_password_text">Forgot password</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_or_text">Or</string>
    <string name="login_login_button_description">Sign in</string>
    <string name="login_facebook_login_button_description">Facebook login</string>

    <!-- Create Account -->
    <string name="create_account_title">Create an account</string>
    <string name="create_account_name_text">Name</string>
    <string name="create_account_email_text">Email</string>
    <string name="create_account_password_text">Password</string>
    <string name="create_account_confirm_password_text">Confirm password</string>
    <string name="create_account_login_button_description">Create an account</string>
    <string name="create_account_back_button_description">Back</string>

    <!-- Feed -->
    <string name="feed_highlights_title">Highlights</string>
    <string name="feed_news_title">Latest news</string>
    <string name="feed_filter">Filter</string>

    <!-- Highlights Item -->
    <string name="highlights_item_favorite_button_description">Favorite</string>

    <!-- News Item -->
    <string name="news_item_favorite_button_description">Favorite</string>
    <string name="news_item_share_button_description">Share</string>

    <!-- Filter -->
    <string name="filter_description_text">Filter the news according to your preferences</string>
    <string name="filter_date_option">Date</string>
    <string name="filter_favorite_option">Favorite</string>
    <string name="filter_text_hint">Search for a news</string>
    <string name="filter_button_text">Filter</string>

    <!-- News Detail -->
    <string name="news_detail_share_text">Take a look at this news: %s</string>

</resources>