<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.login.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/login_start_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/login_end_guideline" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_title_text"
            android:fontFamily="@font/cabin_bold"
            android:text="@string/login_title"
            android:textSize="@dimen/login_text_size_title_text"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_description"
            android:textSize="@dimen/login_text_size_description_text"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_email_layout"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_text"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_password_layout"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/email_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/black"
            app:startIconDrawable="@drawable/ic_key"
            app:startIconTint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_text"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:minHeight="@dimen/login_min_height_forgot_password_button"
            android:padding="@dimen/login_padding_forgot_password_button"
            android:text="@string/login_forgot_password_text"
            android:textColor="@color/teal_700"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/password_layout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_login_button"
            android:contentDescription="@string/login_login_button_description"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_or_text"
            android:text="@string/login_or_text"
            android:textAllCaps="true"
            android:textColor="@color/divider"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/login_layout_height_divider"
            android:layout_marginEnd="@dimen/login_margin_end_divider"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="@id/or_text"
            app:layout_constraintEnd_toStartOf="@id/or_text"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/or_text" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/login_layout_height_divider"
            android:layout_marginStart="@dimen/login_margin_start_divider"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="@id/or_text"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/or_text"
            app:layout_constraintTop_toTopOf="@id/or_text" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/facebook_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_facebook_login_button"
            android:backgroundTint="@color/facebook"
            android:contentDescription="@string/login_facebook_login_button_description"
            android:src="@drawable/ic_facebook"
            app:borderWidth="@dimen/login_border_width_facebook_login_button"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/or_text"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_create_account_button"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="@dimen/login_min_height_create_account_button"
            android:padding="@dimen/login_padding_create_account_button"
            android:text="@string/login_sign_up_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/facebook_button" />

        <include
            android:id="@+id/loading"
            layout="@layout/include_loading"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>