<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".features.filter.FilterDialogFragment">

        <TextView
            android:id="@+id/filter_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/filter_description_text"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_description_text">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/filter_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:button="@null"
                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                android:paddingHorizontal="16dp"
                android:text="@string/filter_date_option" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/filter_favorite_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:button="@null"
                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                android:paddingHorizontal="16dp"
                android:text="@string/filter_favorite_option" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>